crates/mnemonist-cli/tests/snapshots/integration__snapshot_config_get_output.snap
---
source: crates/mnemonist-cli/tests/integration.rs
expression: json
---
{
  "data": {
    "key": "embedding.model",
    "value": "sentence-transformers/all-MiniLM-L6-v2"
  },
  "ok": true
}
