crates/mnemonist-cli/tests/snapshots/integration__snapshot_forget_error_output.snap
---
source: crates/mnemonist-cli/tests/integration.rs
expression: json
---
{
  "error": "not found: nonexistent.md",
  "ok": false
}
