crates/mnemonist-cli/tests/snapshots/integration__snapshot_init_output.snap
---
source: crates/mnemonist-cli/tests/integration.rs
expression: redact_cli_json(json)
---
{
  "data": {
    "level": "project",
    "path": "[path]"
  },
  "ok": true
}
