crates/mnemonist-cli/tests/snapshots/integration__snapshot_memorize_output.snap
---
source: crates/mnemonist-cli/tests/integration.rs
expression: json
---
{
  "data": {
    "action": "created",
    "embedded": false,
    "file": "feedback_write-tests.md"
  },
  "ok": true
}
