crates/mnemonist-cli/tests/snapshots/integration__snapshot_note_output.snap
---
source: crates/mnemonist-cli/tests/integration.rs
expression: json
---
{
  "data": {
    "capacity": 7,
    "inbox_size": 1
  },
  "ok": true
}
