crates/mnemonist-cli/tests/snapshots/integration__snapshot_reflect_output.snap
---
source: crates/mnemonist-cli/tests/integration.rs
expression: redact_cli_json(json)
---
{
  "data": {
    "inbox": {
      "capacity": 10,
      "items": [
        {
          "attention_score": 0.949999988079071,
          "created_at": "[timestamp]",
          "id": "check-logging",
          "source": "remember"
        }
      ],
      "size": 1
    },
    "memories": [
      {
        "file": "feedback_prefer-rust.md",
        "source": "remember",
        "strength": 1.0,
        "summary": "prefer rust",
        "title": "prefer rust"
      }
    ]
  },
  "ok": true
}
