crates/mnemonist-cli/tests/snapshots/integration__snapshot_remember_defer_output.snap
---
source: crates/mnemonist-cli/tests/integration.rs
expression: json
---
{
  "data": {
    "capacity": 10,
    "inbox_size": 1
  },
  "ok": true
}
